[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene/Scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreBG" type="ColorRect" parent="."]
margin_left = 21.0
margin_top = 19.0
margin_right = 104.0
margin_bottom = 37.0

[node name="ScoreOut" type="RichTextLabel" parent="ScoreBG"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 42.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 41.0

[node name="ScoreLabel" type="RichTextLabel" parent="ScoreBG"]
modulate = Color( 1, 0.0156863, 0.0156863, 1 )
margin_right = 40.0
margin_bottom = 40.0
text = "Score "

[node name="GunStatBG" type="ColorRect" parent="."]
margin_left = 591.0
margin_top = 16.0
margin_right = 786.0
margin_bottom = 56.0

[node name="Label" type="RichTextLabel" parent="GunStatBG"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 82.0
margin_bottom = 20.0
text = "Ammo"

[node name="AmmoCount" type="RichTextLabel" parent="GunStatBG"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 90.0
margin_top = 1.0
margin_right = 194.0
margin_bottom = 39.0

[node name="ReloadPrompt" type="ColorRect" parent="."]
visible = false
margin_left = 266.0
margin_top = 11.0
margin_right = 462.0
margin_bottom = 51.0

[node name="RichTextLabel" type="RichTextLabel" parent="ReloadPrompt"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 42.0
margin_top = 13.0
margin_right = 163.0
margin_bottom = 53.0
text = "Press R to Reload"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 21.0
margin_top = 50.0
margin_right = 187.0
margin_bottom = 75.0
value = 100.0
